crates/fig-lexer/tests/snapshots/integration_tests__using__deep_path.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Using
- Ident: std
- ColonColon
- Ident: collections
- ColonColon
- Ident: hash_map
- Newline
- Using
- Ident: core
- ColonColon
- Ident: mem
- ColonColon
- Ident: layout
- ColonColon
- Ident: allocator
- Newline
