crates/fig-lexer/tests/snapshots/integration_tests__using__simple.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Using
- Ident: std
- ColonColon
- Ident: io
- Newline
- Using
- Ident: core
- ColonColon
- Ident: memory
- Newline
- Using
- Ident: core
- ColonColon
- Ident: iter
- Newline
